--- a/react_client/package.json
+++ b/react_client/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "izitoast": "^1.4.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-motion-drawer": "^3.1.0",
     "react-scripts": "1.1.5",
+    "react-toastify": "^4.3.1",
     "reactstrap": "^6.4.0"
   },
   "scripts": {
